# cosmic-ext-applet-vigil

./: Cargo.toml  justfile
i18n/en/: cosmic_ext_applet_redbull.ftl  cosmic_ext_applet_vigil.ftl
i18n/uk/: cosmic_ext_applet_vigil.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  main.rs
