[package]
name = "cosmic-ext-applet-vigil"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Keep your screen awake — a vigil applet for the COSMIC™ desktop"

[dependencies]
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["time"] }
zbus = { version = "5", default-features = false, features = ["blocking-api"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]
